--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         minha dedicação à excelência.
                     </p>
                     <p>
-                        Estou profundamente interessado em estudar na área integração de software e 
+                        Estou profundamente interessado em estudar na área de integração de software e 
                         hardware, especificamente no desenvolvimento de software que interage com 
                         sensores físicos. Meu objetivo é projetar e implementar uma plataforma robusta 
                         de Internet das Coisas (IoT) para rastreamento veicular, utilizando tecnologias 
